--- a/stuff/configs/config.yaml
+++ b/stuff/configs/config.yaml
@@ -15,3 +15,7 @@ data:
     addr: 127.0.0.1:6379
     read_timeout: 0.2s
     write_timeout: 0.2s
+
+media:
+  base_url: http://localhost/media/
+  image_url: http://localhost/media/image/
