--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tinymce/tinymce-vue": "^6.1.0",
     "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
     "element-plus": "^2.9.1",
     "pinia": "^2.3.0",
     "pinia-plugin-persistedstate": "^4.2.0",
